# ApnaHood

./: .breakpoints  .gitignore  .replit  README.md  main.py  model.py  pyproject.toml  replit.nix  testing.py
Plan/: README.md  planning.txt  template.html
route/: routes1.py
static/: about.css  checkout.css  common.css  contact.css  dump.txt  entry.css  entry.js  faq.css  home.css  home.js  housemodal.css  housemodal.js  myhouses.css  profile.css  profile.js  property.css  property.js  search.css  test.css
static/scripts/: map.js
templates/: about.html  checkout.html  contact.html  entry.html  faq.html  home.html  home2.html  house_card.html  housemodal.html  myhouses.html  privacy.html  profile.html  property.html  search.html  test.html
